# wm_robot

./: .gitignore  README.md  start_robot.sh
maps/: my_map1.pgm  my_map1.yaml  my_map2.pgm  my_map2.yaml  my_map3.pgm  my_map3.yaml
matlab/: README.md
matlab/firmware/: motor1_pid.ino  motor2_pid.ino
matlab/pid_tuning/: importfile.m  pid_tuning.slx
src/wm_robot_bringup/: CMakeLists.txt  package.xml
src/wm_robot_bringup/config/: Joy_stick.yaml  ekf_config.yaml  nav2_params.yaml  wm_robot_controllers.yaml
src/wm_robot_bringup/launch/: navigation_launch.py  robot_launch.py  wm_robot.launch.xml
src/wm_robot_firmware/: package.xml  setup.cfg  setup.py
src/wm_robot_firmware/firmware/serial_transmitter/: serial_transmitter.ino
src/wm_robot_firmware/firmware/turn_on_and_off_led/: turn_on_and_off_led.ino
src/wm_robot_firmware/wm_robot_firmware/: simple_serial_reciever.py  simple_serial_transmitter.py
src/wm_robot_hardware/: CMakeLists.txt  package.xml  wm_robot_hardware_interface.xml
src/wm_robot_hardware/include/wm_robot_hardware/: cytron_driver.hpp  wm_robot_base_hardware_interface.hpp
src/wm_robot_hardware/scripts/: imu_node.py
src/wm_robot_hardware/src/: cytron_driver.cpp  robot_node.cpp  wm_robot_base_hardware_interface.cpp
src/wm_robot_project/: CMakeLists.txt  package.xml
src/wm_robot_project/launch/: display.launch.py  wm_robot_gazebo.launch.py
src/wm_robot_project/meshes/: base_link.STL  caster1.STL  caster2.STL  soni1.STL  soni2.STL  soni3.STL  soni4.STL  soni5.STL  wheel1.STL  wheel2.STL
src/wm_robot_project/rviz/: urdf_config.rviz
src/wm_robot_project/urdf/: common_prop.xacro  mobile_base.ros2_control.xacro  mobile_base.xacro  wm_robot.urdf.xacro
src/wm_robot_project/worlds/: empty.sdf
